compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyDefault.out
compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyUsage.kt:2:11: error: null cannot be a value of a non-null type 'String'.
    a.foo(null)
          ^^^^
compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyUsage.kt:3:12: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type '@Nullable() String?'.
    a.bar().length
           ^
COMPILATION_ERROR
